Completely reflow introduction, use IEEE references, fix references

--- a/Thesis/Makefile
+++ b/Thesis/Makefile
@@ -3,5 +3,5 @@ all: Thesis.tex
 	pdflatex $^
 
 clean:
-	rm *.log *.aux *.blg *.lof *.lot *.toc *.out
+	rm *.log *.aux *.blg *.lof *.lot *.toc *.out *.bbl
 
